# FastVoxel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fastvoxel.cbp  pyproject.toml  setup.py  workspace.workspace
.github/workflows/: python-test.yml
Tests/: test_np_voxel.py
demo/: elmia.ply  import_ply.py  test_import_ply.py  test_triangle_feed.py
doc/: old_doc_fr.odt
fastvoxel/: __init__.py  np_voxel.py  test_import_ply.py  test_triangle_feed.py
resources/fastvoxel/: __init__.py
src/: __init__.py  en_numeric.cpp  en_numeric.hpp  fastvoxel.i  fastvoxel.py  fastvoxel_wrap.cxx  main_remesh.cpp  mathlib.h  np_voxel.py  pyfragments.swg  scalar_field_creator.cpp  scalar_field_creator.hpp  spatial_discretization.cpp  spatial_discretization.hpp  std_tools.cpp  std_tools.hpp  triangle_feeder.cpp  triangle_feeder.hpp
src/Core/: Model3D.h  mathlib.h
src/input_output/: progressionInfo.h
src/input_output/ply/: rply_interface.cpp  rply_interface.hpp
src/manager/: smart_ptr.h
src/tools/: intersection_algo.h  octree44_triangleElement.cpp  octree44_triangleElement.hpp
