[build-system]
requires = ["scikit-build-core", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "fastvoxel"
version = "1.0.2"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1"
testpaths = ["Tests"]
